plugins {
    id 'java'
    id 'eclipse'
    id 'application'
}

group = 'icb'
version = '1.0.0'
sourceCompatibility = '17'
targetCompatibility = '17'

repositories {
    mavenCentral()
}

def scalaBinaryVersion(String sparkVersion) {
    return sparkVersion.startsWith('3.') ? '2.12' : '2.13'
}

def sparkVersion = '3.5.5'
def sparkMinorVersion = sparkVersion.split('\\.')[0..1].join('.')
def icebergVersion = '1.11.0'

dependencies {
    implementation "org.apache.spark:spark-core_${scalaBinaryVersion(sparkVersion)}:${sparkVersion}"
    implementation "org.apache.spark:spark-sql_${scalaBinaryVersion(sparkVersion)}:${sparkVersion}"
    implementation "org.apache.iceberg:iceberg-spark-runtime-${sparkMinorVersion}_${scalaBinaryVersion(sparkVersion)}:${icebergVersion}"
    implementation 'org.apache.hadoop:hadoop-aws:3.5.0'
    implementation 'com.amazonaws:aws-java-sdk-bundle:1.12.797'
}

jar {
    manifest {
        attributes 'Main-Class': 'icb.CheckSpark'  // Прямое указание
    }
}

distZip {
   enabled = false 
}
distTar {
   enabled = false
}

installDist {
   enabled = false
}


application {
    mainClass = 'icb.CheckSpark'

    applicationDefaultJvmArgs = [
        '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
        '--add-opens=java.base/java.nio=ALL-UNNAMED'
    ]
}
